src/antlr/ProductParser.java
// Generated from C:/Users/ASUS/IdeaProjects/FlaskTemplateCompiler/src/antlr/ProductParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProductParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FROM=1, IMPORT=2, AS=3, FLASK=4, FLASK_KW=5, RENDER_STR=6, RENDER_TMP=7, 
		REQUEST=8, APP=9, ROUTE=10, DEF=11, RETURN=12, RUNKW=13, IF=14, ENDIF=15, 
		ELSE=16, ELIF=17, FOR=18, ENDFOR=19, IN=20, METHOD=21, FORM=22, INT=23, 
		FLOAT=24, STR=25, BOOL=26, METHODS=27, FUNCTION=28, EXPORT=29, DEFAULT=30, 
		CONST=31, LET=32, VAR=33, NULL=34, TRUE=35, FALSE=36, SDOLAR=37, AT=38, 
		EQEQ=39, NEQ=40, EQ=41, PLUS=42, MINUS=43, STAR=44, DIV=45, LP=46, RP=47, 
		LBRACK=48, RBRACK=49, LBRACE=50, RBRACE=51, COMMA=52, DOT=53, EXCL=54, 
		SEMICOLON=55, ARROW=56, COLON=57, IS_EQUAL_TYPE=58, NOT_EQUAL_TYPE=59, 
		LESS_EQUAL=60, GRETER_EQUAL=61, AND=62, OR=63, HANDRED=64, HASH=65, TRIPLE_STRING=66, 
		LINE_COMMENT_PY=67, LINE_COMMENT_JS=68, BLOCK_COMMENT=69, WS=70, FLOAT_NUM=71, 
		NUMBER=72, DECIMAL_INTEGER_LITERAL=73, FLOAT_LITERAL=74, STRING=75, STRING_LITERAL=76, 
		TEMPLATE_LITERAL=77, DUUNDER_NAME=78, DOCTYPE=79, OPENTAG=80, CLOSETAG=81, 
		ID=82, IDENTIFIER=83, NEWLINE=84;
	public static final int
		RULE_start = 0, RULE_file = 1, RULE_importStmt = 2, RULE_importItems = 3, 
		RULE_importItem = 4, RULE_importJsItems = 5, RULE_appInit = 6, RULE_dataBlock = 7, 
		RULE_addBlock = 8, RULE_dictAssign = 9, RULE_productFields = 10, RULE_field = 11, 
		RULE_singleTag = 12, RULE_closeSingleTag = 13, RULE_id_id = 14, RULE_bodyCSS = 15, 
		RULE_jinjatemplete = 16, RULE_elseElif = 17, RULE_if_statment = 18, RULE_htmlTag = 19, 
		RULE_fortemplete = 20, RULE_valueHtmlL = 21, RULE_htmlTemplate = 22, RULE_routeDef = 23, 
		RULE_paramList = 24, RULE_routeBody = 25, RULE_returnStmt = 26, RULE_formHandler = 27, 
		RULE_requestMethodIsPost = 28, RULE_statement = 29, RULE_target = 30, 
		RULE_expr = 31, RULE_literal = 32, RULE_suffix = 33, RULE_dictLiteral = 34, 
		RULE_listLiteral = 35, RULE_exprList = 36, RULE_listComprehension = 37, 
		RULE_compFor = 38, RULE_compCond = 39, RULE_leftOperand = 40, RULE_rightOperand = 41, 
		RULE_comparator = 42, RULE_runStmt = 43, RULE_mainCheck = 44, RULE_runArgs = 45, 
		RULE_arg = 46, RULE_jsInstruction = 47, RULE_function_declaration = 48, 
		RULE_function_body = 49, RULE_instruction_js = 50, RULE_return_js = 51, 
		RULE_function_call = 52, RULE_variabe = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "file", "importStmt", "importItems", "importItem", "importJsItems", 
			"appInit", "dataBlock", "addBlock", "dictAssign", "productFields", "field", 
			"singleTag", "closeSingleTag", "id_id", "bodyCSS", "jinjatemplete", "elseElif", 
			"if_statment", "htmlTag", "fortemplete", "valueHtmlL", "htmlTemplate", 
			"routeDef", "paramList", "routeBody", "returnStmt", "formHandler", "requestMethodIsPost", 
			"statement", "target", "expr", "literal", "suffix", "dictLiteral", "listLiteral", 
			"exprList", "listComprehension", "compFor", "compCond", "leftOperand", 
			"rightOperand", "comparator", "runStmt", "mainCheck", "runArgs", "arg", 
			"jsInstruction", "function_declaration", "function_body", "instruction_js", 
			"return_js", "function_call", "variabe"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'from'", "'import'", "'as'", "'flask'", "'Flask'", "'render_template_string'", 
			"'render_template'", "'request'", "'app'", "'route'", "'def'", "'return'", 
			"'run'", "'if'", "'endif'", "'else'", "'elif'", "'for'", "'endfor'", 
			"'in'", "'method'", "'form'", "'int'", "'float'", "'str'", "'bool'", 
			"'methods'", "'function'", "'export'", "'default'", "'const'", "'let'", 
			"'var'", "'null'", "'true'", "'false'", "'$'", "'@'", "'=='", "'!='", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "','", "'.'", "'!'", "';'", "'=>'", "':'", "'==='", "'!=='", "'<='", 
			"'>='", "'&&'", "'||'", "'%'", "'#'", "'\"\"\"'", null, null, null, null, 
			null, null, null, null, null, null, null, "'__name__'", "'<!DOCTYPE html>'", 
			"'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FROM", "IMPORT", "AS", "FLASK", "FLASK_KW", "RENDER_STR", "RENDER_TMP", 
			"REQUEST", "APP", "ROUTE", "DEF", "RETURN", "RUNKW", "IF", "ENDIF", "ELSE", 
			"ELIF", "FOR", "ENDFOR", "IN", "METHOD", "FORM", "INT", "FLOAT", "STR", 
			"BOOL", "METHODS", "FUNCTION", "EXPORT", "DEFAULT", "CONST", "LET", "VAR", 
			"NULL", "TRUE", "FALSE", "SDOLAR", "AT", "EQEQ", "NEQ", "EQ", "PLUS", 
			"MINUS", "STAR", "DIV", "LP", "RP", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
			"COMMA", "DOT", "EXCL", "SEMICOLON", "ARROW", "COLON", "IS_EQUAL_TYPE", 
			"NOT_EQUAL_TYPE", "LESS_EQUAL", "GRETER_EQUAL", "AND", "OR", "HANDRED", 
			"HASH", "TRIPLE_STRING", "LINE_COMMENT_PY", "LINE_COMMENT_JS", "BLOCK_COMMENT", 
			"WS", "FLOAT_NUM", "NUMBER", "DECIMAL_INTEGER_LITERAL", "FLOAT_LITERAL", 
			"STRING", "STRING_LITERAL", "TEMPLATE_LITERAL", "DUUNDER_NAME", "DOCTYPE", 
			"OPENTAG", "CLOSETAG", "ID", "IDENTIFIER", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProductParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProductParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ProductParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			file();
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public AppInitContext appInit() {
			return getRuleContext(AppInitContext.class,0);
		}
		public List<ImportStmtContext> importStmt() {
			return getRuleContexts(ImportStmtContext.class);
		}
		public ImportStmtContext importStmt(int i) {
			return getRuleContext(ImportStmtContext.class,i);
		}
		public List<DataBlockContext> dataBlock() {
			return getRuleContexts(DataBlockContext.class);
		}
		public DataBlockContext dataBlock(int i) {
			return getRuleContext(DataBlockContext.class,i);
		}
		public HtmlTemplateContext htmlTemplate() {
			return getRuleContext(HtmlTemplateContext.class,0);
		}
		public List<RouteDefContext> routeDef() {
			return getRuleContexts(RouteDefContext.class);
		}
		public RouteDefContext routeDef(int i) {
			return getRuleContext(RouteDefContext.class,i);
		}
		public RunStmtContext runStmt() {
			return getRuleContext(RunStmtContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				importStmt();
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FROM || _la==IMPORT );
			setState(116);
			appInit();
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(117);
					dataBlock();
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(123);
				htmlTemplate();
				}
			}

			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(126);
				routeDef();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==APP || _la==IF) {
				{
				setState(132);
				runStmt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(ProductParser.FROM, 0); }
		public TerminalNode FLASK() { return getToken(ProductParser.FLASK, 0); }
		public TerminalNode IMPORT() { return getToken(ProductParser.IMPORT, 0); }
		public ImportItemsContext importItems() {
			return getRuleContext(ImportItemsContext.class,0);
		}
		public ImportJsItemsContext importJsItems() {
			return getRuleContext(ImportJsItemsContext.class,0);
		}
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStmt);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(FROM);
				setState(136);
				match(FLASK);
				setState(137);
				match(IMPORT);
				setState(138);
				importItems();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(IMPORT);
				setState(140);
				importJsItems();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemsContext extends ParserRuleContext {
		public List<ImportItemContext> importItem() {
			return getRuleContexts(ImportItemContext.class);
		}
		public ImportItemContext importItem(int i) {
			return getRuleContext(ImportItemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ProductParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ProductParser.COMMA, i);
		}
		public ImportItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterImportItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitImportItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitImportItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemsContext importItems() throws RecognitionException {
		ImportItemsContext _localctx = new ImportItemsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importItems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			importItem();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(144);
				match(COMMA);
				setState(145);
				importItem();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemContext extends ParserRuleContext {
		public TerminalNode FLASK_KW() { return getToken(ProductParser.FLASK_KW, 0); }
		public TerminalNode RENDER_STR() { return getToken(ProductParser.RENDER_STR, 0); }
		public TerminalNode RENDER_TMP() { return getToken(ProductParser.RENDER_TMP, 0); }
		public TerminalNode REQUEST() { return getToken(ProductParser.REQUEST, 0); }
		public TerminalNode ID() { return getToken(ProductParser.ID, 0); }
		public ImportItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterImportItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitImportItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitImportItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemContext importItem() throws RecognitionException {
		ImportItemContext _localctx = new ImportItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 480L) != 0) || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportJsItemsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ProductParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ProductParser.IDENTIFIER, i);
		}
		public TerminalNode COMMA() { return getToken(ProductParser.COMMA, 0); }
		public TerminalNode LBRACE() { return getToken(ProductParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ProductParser.RBRACE, 0); }
		public TerminalNode FROM() { return getToken(ProductParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(ProductParser.STRING, 0); }
		public ImportJsItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importJsItems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterImportJsItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitImportJsItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitImportJsItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportJsItemsContext importJsItems() throws RecognitionException {
		ImportJsItemsContext _localctx = new ImportJsItemsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importJsItems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(IDENTIFIER);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(154);
				match(COMMA);
				setState(155);
				match(LBRACE);
				setState(156);
				match(IDENTIFIER);
				setState(157);
				match(RBRACE);
				setState(158);
				match(FROM);
				setState(159);
				match(STRING);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppInitContext extends ParserRuleContext {
		public TerminalNode APP() { return getToken(ProductParser.APP, 0); }
		public TerminalNode EQ() { return getToken(ProductParser.EQ, 0); }
		public TerminalNode FLASK_KW() { return getToken(ProductParser.FLASK_KW, 0); }
		public TerminalNode LP() { return getToken(ProductParser.LP, 0); }
		public TerminalNode DUUNDER_NAME() { return getToken(ProductParser.DUUNDER_NAME, 0); }
		public TerminalNode RP() { return getToken(ProductParser.RP, 0); }
		public AppInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterAppInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitAppInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitAppInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppInitContext appInit() throws RecognitionException {
		AppInitContext _localctx = new AppInitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_appInit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(APP);
			setState(163);
			match(EQ);
			setState(164);
			match(FLASK_KW);
			setState(165);
			match(LP);
			setState(166);
			match(DUUNDER_NAME);
			setState(167);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataBlockContext extends ParserRuleContext {
		public AddBlockContext addBlock() {
			return getRuleContext(AddBlockContext.class,0);
		}
		public DictAssignContext dictAssign() {
			return getRuleContext(DictAssignContext.class,0);
		}
		public DataBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterDataBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitDataBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitDataBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataBlockContext dataBlock() throws RecognitionException {
		DataBlockContext _localctx = new DataBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataBlock);
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				addBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				dictAssign();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
